--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/AnshumaanBaaghi/Json-server-Block-23-try#readme",
   "dependencies": {
+    "json-server": "^0.17.1",
     "nodemon": "^2.0.20"
   }
 }
